[lib]
# crate-type = ["cdylib"]

[package]
name = "svg-diff"
version = "0.0.1"
authors = ["Nathan Hüeksen <nathan@wintercloud.de>"]
edition = "2021"
description = "Find the diff between 2 SVGs in the form of a list of operations to get transform from one SVG to the other"
keywords = ["svg", "diff"]
repository = "https://github.com/RudolfVonKrugstein/svg-diff"
homepage = "https://github.com/RudolfVonKrugstein/svg-diff"
documentation = "https://github.com/RudolfVonKrugstein/svg-diff"
readme = "README.md"
license = "MIT"
exclude = [".idea/", "node_modules", "yarn.lock", ".github"]

[dependencies]
svg = "0.10"
svgtypes = "0"
regex = "1"
error-chain = "0.12"
napi = "2"
napi-derive = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0"
env_logger = "0"
mime = "0"
random-string = "1"
flange-flat-tree = "0.2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
pikchr = "0"
actix-web = "4"
actix-files = "0"

[features]
node = []
