[lib]
crate-type = ["cdylib", "lib"]

[package]
name = "svg-diff"
version = "0.0.1"
authors = ["Nathan Hüeksen <nathan@wintercloud.de>"]
edition = "2021"
description = "Find the diff between 2 SVGs in the form of a list of operations to get transform from one SVG to the other"
keywords = ["svg", "diff"]
repository = "https://github.com/RudolfVonKrugstein/svg-diff"
homepage = "https://github.com/RudolfVonKrugstein/svg-diff"
documentation = "https://github.com/RudolfVonKrugstein/svg-diff"
readme = "README.md"
license = "MIT"
exclude = [".idea/", "node_modules", "yarn.lock", ".github"]

[dependencies]
svg = { git = "https://github.com/RudolfVonKrugstein/svg.git", branch = "feature/store_declarations" }
svgtypes = "0"
regex = "1"
error-chain = "0.12"
napi = { version = "2", optional = true }
napi-derive = { version = "2", optional = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0"
env_logger = "0"
mime = "0"
random-string = "1"
flange-flat-tree = "0.2"

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
git-graph-to-svg = { git = "https://github.com/RudolfVonKrugstein/git-graph-to-svg.git" }

pikchr = "0"
actix-web = "4"
actix-files = "0"
[features]
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
