[lib]
crate-type = ["cdylib", "lib"]

[package]
name = "svg-diff"
version = "0.0.5-rc3"
authors = ["Nathan Hüeksen <nathan@wintercloud.de>"]
edition = "2021"
description = "Find the diff between 2 SVGs in the form of a list of operations to get transform from one SVG to the other"
keywords = ["svg", "diff"]
repository = "https://github.com/RudolfVonKrugstein/svg-diff"
homepage = "https://github.com/RudolfVonKrugstein/svg-diff"
documentation = "https://github.com/RudolfVonKrugstein/svg-diff"
readme = "README.md"
license = "MIT"
exclude = [".idea/", "node_modules", "yarn.lock", ".github"]

[dependencies]
svg = "0"
svgtypes = "0"
regex = "1"
error-chain = "0.12"
napi = { version = "2", optional = true, features = ["serde-json"] }
napi-derive = { version = "2", optional = true }
serde_json = "1"
serde_yaml = "0"
serde = { version = "1", features = ["derive"] }
log = "0"
env_logger = "0"
mime = "0"
random-string = "1"
flange-flat-tree = "0.2"
wasm-bindgen = { version = "0", optional = true }
serde-wasm-bindgen = { version = "0", optional = true }
console_error_panic_hook = {version = "0", optional = true}

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
git-graph-to-svg = { git = "https://github.com/RudolfVonKrugstein/git-graph-to-svg.git" }

pikchr = "0"
actix-web = "4"
actix-files = "0"
[features]
node = ["napi", "napi-derive", "napi-build"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "serde-wasm-bindgen"]
